--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -1,2 +1,11 @@
 <h1>Search#index</h1>
 <p>Find me in app/views/search/index.html.erb</p>
+<%= @members.each do |member| %>
+  <ul>
+    <li><%= member.name %></li>
+    <li><%= member.role %></li>
+    <li><%= member.house %></li>
+    <li><%= member.patronus %></li>
+  </ul>
+  <p>-------------------------------</p>
+<% end %>
