--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -1,6 +1,7 @@
 <h1>Search#index</h1>
-<p>Find me in app/views/search/index.html.erb</p>
-<%= @members.each do |member| %>
+<p>Order of the Phoenix members from house <%= @house %></p>
+<p>Total members: <%= @members.size %> </p>
+<% @members.each do |member| %>
   <ul>
     <li><%= member.name %></li>
     <li><%= member.role %></li>
