Update header in search index view

--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -1,5 +1,4 @@
-<h1>Search#index</h1>
-<p>Order of the Phoenix members from house <%= @house %></p>
+<h1>Order of the Phoenix members from house <%= @house %></h1>
 <p>Total members: <%= @members.size %> </p>
 <% @members.each do |member| %>
   <ul>
